--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,27 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Resume</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
+  <head>
+    <meta charset="utf-8">
+    <title>Firdous</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
+  <body>
+    <!-- Firebase App (the core Firebase SDK) -->
+    <!-- <script src="/__/firebase/7.8.0/firebase-app.js"></script> -->
+
+    <!-- Firebase SDK for Analytics -->
+    <!-- <script src="/__/firebase/7.8.0/firebase-analytics.js"></script> -->
+    
+    <!-- Firebase SDK for Firestore -->
+    <!-- <script src="/__/firebase/7.8.0/firebase-firestore.js"></script> -->
+
+    <!-- Firebase initialize -->
+    <!-- <script src="/__/firebase/init.js"></script> -->
+    
+    <app-root></app-root>
 </body>
 </html>
