--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <title>Firdous</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
-  <body>
+  <body style="overflow-x: hidden;">
     <!-- Firebase App (the core Firebase SDK) -->
     <!-- <script src="/__/firebase/7.8.0/firebase-app.js"></script> -->
 
